--- a/projeto-final/package.json
+++ b/projeto-final/package.json
@@ -29,7 +29,9 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-validator": "^7.1.0"
+    "express-validator": "^7.1.0",
+    "mysql2": "^3.11.3"
   }
 }
